--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ typings/
 
 # Generated files
 .idea/**/contentModel.xml
+.idea/*
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
@@ -93,6 +94,7 @@ typings/
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
+
 
 # CMake
 cmake-build-*/
