--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A coding challenge exploring various tasks using Node and a frontend framework of your choosing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./server/index.js"
   },
   "author": "Richard Boothe",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.4"
   }
 }
